crates/weft-snapshots/tests/snapshots/html/example-dialog.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-dialog as html
---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Files</title>
<style>
:root {
  --weft-space-xs: 4px;
  --weft-space-sm: 8px;
  --weft-space-md: 16px;
  --weft-space-lg: 24px;
  --weft-space-xl: 32px;
  --weft-radius-sm: 4px;
  --weft-radius-md: 8px;
  --weft-radius-pill: 999px;
  --weft-font-size-sm: 0.875rem;
  --weft-font-size-md: 1rem;
  --weft-font-size-lg: 1.25rem;
  --weft-font-size-xl: 1.75rem;
  --weft-color-white: #ffffff;
  --weft-color-ink: #1a1c21;
  --weft-color-blue-_root: #2563eb;
  --weft-color-red: #dc2626;
  --weft-color-action-primary: #2563eb;
  --weft-color-action-danger: #dc2626;
}
.weft-stack { display: flex; flex-direction: column; }
.weft-row { display: flex; flex-direction: row; }
.weft-grid { display: grid; }
[data-align="start"] { align-items: flex-start; }
[data-align="center"] { align-items: center; }
[data-align="end"] { align-items: flex-end; }
[data-align="stretch"] { align-items: stretch; }
[data-wrap] { flex-wrap: wrap; }
.weft-field label, .weft-toggle { display: flex; gap: 0.5em; }
.weft-field label { flex-direction: column; }
[hidden] { display: none !important; }
</style>
</head>
<body>
<main data-weft-id="root" aria-label="Files">
  <dialog data-weft-id="confirm" aria-label="Delete file?" aria-modal="true" data-bind="open:$.confirmOpen" data-action="close:dialog.close">
    <p data-weft-id="warn">This cannot be undone.</p>
    <footer data-weft-slot="actions">
      <button data-weft-id="cancel" type="button" data-action="press:dialog.close">Cancel</button>
      <button data-weft-id="ok" type="button" data-variant="danger" data-action="press:file.delete">Delete</button>
    </footer>
  </dialog>
</main>
</body>
</html>
